assets/styles/grid/_grid.scss
/* stylelint-disable plugin/stylelint-bem-namics */

$columns-count: 12;

:root {
  --container-padding: 1.5rem;
  --content-width: calc(1760px + (2 * var(--container-padding)));
  --grid-row-gap: 0.75rem;
  --grid-column-gap: 0.75rem;

  @include breakpoint-up('md') {
    --grid-row-gap: 1.5rem;
    --grid-column-gap: 1.5rem;
    --container-padding: 2.5rem;
  }
}

.container {
  padding-left: var(--container-padding);
  padding-right: var(--container-padding);
  width: 100%;
  margin: 0 auto;

  &:not(.container--fluid) {
    max-width: var(--content-width);
  }
}

.grid {
  display: grid;
  grid-template-columns: repeat($columns-count, 1fr);
  grid-gap: var(--grid-row-gap) var(--grid-column-gap);

  &.no-gap {
    grid-gap: 0 0;
  }

  &.no-row-gap {
    grid-row-gap: 0;
  }

  &.no-column-gap {
    grid-column-gap: 0;
  }

  &.align-items-center {
    align-items: center;
  }

  &.justify-items-center {
    justify-items: center;
  }

  &.align-items-end {
    align-items: end;
  }
}

@for $i from 0 through $columns-count {
  .col-#{$i} {
    grid-column-end: span #{$i};
  }

  .order-#{$i} {
    order: #{$i};
  }

  .offset-#{$i} {
    grid-column-start: #{$i + 1};
  }
}

@each $key, $value in $breakpoints {
  @include breakpoint-up($key) {
    @for $i from 0 through $columns-count {
      .col-#{$key}-#{$i} {
        grid-column-end: span #{$i};
      }

      .order-#{$key}-#{$i} {
        order: #{$i};
      }

      .offset-#{$key}-#{$i} {
        grid-column-start: #{$i + 1};
      }
    }

    .hide-#{$key}-up {
      display: none;
    }

    .no-padding-#{$key}-up {
      padding: 0;
    }

    .no-margin-#{$key}-up {
      margin: 0;
    }
  }

  @include breakpoint-down($key) {
    @for $i from 0 through $columns-count {
      .hide-#{$key}-down {
        display: none;
      }

      .no-padding-#{$key}-down {
        padding: 0;
      }

      .no-margin-#{$key}-down {
        margin: 0;
      }
    }
  }
}

